@@ -4,11 +4,14 @@
 # This configure build file indicates what libraries and includes
 # exist on the system and generates the required code for to
 # be able to correctly configure the libwcl library
+#
+# A good reference for macros for this config file is at:
+# http://sourceware.org/autobook/autobook/autobook_283.html
 
 AC_PREREQ(2.50)
 
 # Initialise the system
-AC_INIT(libwcl, 0.1, wcl@wcl.levels.unisa.edu.au)
+AC_INIT(wcl, 0.0.0, wcl@wcl.levels.unisa.edu.au)
 
 # Define where autogenerated build files such as 'missing'
 # should be located. This is also the location of any additional
@@ -18,8 +21,20 @@ AC_CONFIG_AUX_DIR(cfg)
 #
 # Init Automake subsystem
 #
-AM_INIT_AUTOMAKE(libwcl,0.1)
+AM_INIT_AUTOMAKE(wcl,0.0.0)
 AM_CONFIG_HEADER(config.h)
+
+#
+# Setup Options
+#
+#####################################
+
+# Indicate this is a release build and that 
+# dependancies for changes between Makefile.am and Makefile.in
+# should not be checked. This makes compiling faster. If you are working
+# on the library, run: ./configure --enable-maintainer-mode to enable the dependancies
+
+AM_MAINTAINER_MODE
 
 #
 # Configure options
@@ -32,6 +47,16 @@ AM_CONFIG_HEADER(config.h)
 #
 AC_ARG_ENABLE(network, AC_HELP_STRING([--enable-network], [Enable basic TCP/UDP C++ Code]), , enable_network="no")
 AM_CONDITIONAL(ENABLE_NETWORK, test "x$enable_network" = "xyes")
+
+#
+# System Checks
+#
+#######################################
+
+#
+# Check which system we are on
+#  	This sets: host variable
+AC_CANONICAL_HOST
 
 #
 # Check for programs
@@ -79,8 +104,7 @@ AC_CHECK_FUNCS([memset])
 #
 ##############################
 AC_CONFIG_FILES([Makefile
-                 src/Makefile
-		 src/network/Makefile
+                 src/wcl/Makefile
 		])
 
 
